--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <img src="https://early-wildflower-281.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Ffb56a855-0c74-4a0d-84dc-3fb7c76ae0b3%2F1490b61c-8097-4d0d-90d1-19c4493c6574%2FSoupInfo.png?table=block&id=d55747aa-efbc-4afa-8e28-796a0ec8234c&spaceId=fb56a855-0c74-4a0d-84dc-3fb7c76ae0b3&width=770&userId=&cache=v2" alt="icons" width="300"  height="60" >
     </div>
 
+    <div class="soup">
+        <img src="https://early-wildflower-281.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Ffb56a855-0c74-4a0d-84dc-3fb7c76ae0b3%2Fca5f671e-7669-49f2-8879-f84ae8b935ba%2Fsuopimg.png?table=block&id=a61ca275-88aa-4cdc-baec-5c97f3178922&spaceId=fb56a855-0c74-4a0d-84dc-3fb7c76ae0b3&width=970&userId=&cache=v2" alt="soup" width="300" height="300">
+    </div>
+
     <div class="line">
     </div>
 
